New commit of practice website code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-"Hello World" 
+<html>
+    
+    <header>
+        <link rel="stylesheet" href="assets/styles.css">
+        <h1>I am Will Almond</h1>
+        <h2>
+            <ul>
+            <li>Yee</li>
+            <li>Neee</li>
+            </ul> 
+        </h2>
+
+
+    </header>
+    <body>
+        This is the story of me
+    </body>
+</html>
