newest commit of practice website code

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
 <html>
     
-    <header>
+    <head>
         <link rel="stylesheet" href="assets/styles.css">
-        <h1>I am Will Almond</h1>
+        <title>I am Will Almond</title>
+        
+        <h1>It is I! Will</h1>
         <h2>
-            <ul>
+            <ul class="list">
             <li>Yee</li>
             <li>Neee</li>
             </ul> 
         </h2>
 
 
-    </header>
+    </head>
     <body>
         This is the story of me
     </body>
