--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    About me page
+    <title>About Me</title>
+    <h1>It's About Me!</h1>
 </head>
 <body>
-    
+    About me page
 </body>
 </html>
