Edited index and css to display menu

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     
     <head>
         <link rel="stylesheet" href="assets/styles.css">
-        <title>I am Will Almond</title>
+        <title>Will Almond</title>
         
-        <h1>It is I! Will</h1>
+        <h1>Will's resume site</h1>
         <nav>
             X 
             <div class="menuhead">
-                <a href="index.html">Main menu</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About me</a>
                 <a href="index.html">Help</a>
                 <a href="index.html">Contact</a>
@@ -19,6 +19,9 @@
 
     </head>
     <body>
-        This is the story of me
+        <h2>Story</h2>
+        <div class="bio">I was born and raised in Poulsbo Washington where I graduated from 
+            North Kitsap High School.</div>
+            <div class></div>
     </body>
 </html>
